Istio/linkedinpost/configuration/Config2.yaml
# Expose your tcp service outside the mesh. Any incoming traffic on port no 7000 will be routed to this service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sms12-virtualservice
spec:
  hosts:
  - "*"
  tcp:
  - match:
    - port: 7000
    route:
    - destination:
        host: sms12.ns1.svc.cluster.local
        port:
          number: 22

# Apply this to have authentication policy for istio ingress to verify the Authentication server details
apiVersion: "authentication.istio.io/v1alpha1"
kind: "Policy"
metadata:
  name: "sms12auth"
spec:
  targets:
    - name: sms12
  origins:
    - jwt:
        issuer: "testing@secure.istio.io" // issuer name of tenant1 OAUTH server
        jwksUri: "https://gist.githubusercontent.com/lordofthejars/7dad589384612d7a6e18398ac0f10065/raw/ea0f8e7b729fb1df25d4dc60bf17dee409aad204/jwks.json" // jwks URI of Oauth server
		audiences:
        - "sms12.ns1.svc.cluster.local"
		OriginAuthenticationMethod:
		- request.auth.user: "usr1"
  principalBinding: USE_ORIGIN

# Apply the authentication policy per service basis
# This should applied to the namespace where the microservice is running
apiVersion: "authentication.istio.io/v1alpha1"
kind: "Policy"
metadata:
  name: "sms12AuthPolicy"
spec:
  targets:
  - name: sms12
  peers:
  - mtls: {}
  
# A destination rule for the same, must be applied on the microservice's namespace
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "sms12Dr"
spec:
  host: "sms12.ns1.svc.cluster.local"
	ports:
	- number: 22
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
