Istio/linkedinpost/configuration/config10.yaml
# Resource 10 - refer the connectivity table above
# Expose your tcp service outside the mesh. Any incoming traffic on port no 10000 will be routed to this service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sms41-virtualservice
spec:
  hosts:
  - "*"
  tcp:
  - match:
    - port: 10000
    route:
    - destination:
        host: sms12.ns1.svc.cluster.local
        port:
          number: 4000
		  
# This is config to disable communication between all microservices in a namespace
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: deny-all
 namespace: ns1
spec:

## Authorization policy to restrict the access to only specific microservice
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: sms41
 namespace: ns1
spec:
 selector:
   matchLabels:
     app: sms41
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/default/sa/dms1"] # This service account must have the services of dms1 deployment
   to:
   - operation:
       methods: ["GET"]
       paths: ["/*"] # Essentially all API exposed by microservice. Can restrict if APIs are known
